--- a/src/TODO
+++ b/src/TODO
@@ -1,3 +1,4 @@
 Prevent collision from real moving objects when it's just for checking
 Change logs to use Logger
 Check if the object is already located before adding a location
+Fix movement errors
