New tasks to do

--- a/src/TODO
+++ b/src/TODO
@@ -1,3 +1,4 @@
 Change logs to use Logger
 Finish snake class
+Add support in field to manipulate coomposite objects
 Comment how the work inside the function is done
